--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 JWT_TOKEN = klak]oj191zen7e{grudd1yabu]%ly{w![75g*:&jx+y>{odi!gld4mf{g-d
+
+DATABASE_URL = postgres://postgres:root@localhost:5432/atendimentos
