--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
       "build": "tsc",
       "dev": "ts-node-dev  src/server.ts",
       "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
-      "start": "ts-node src/server.ts"
+      "start": "node ./dist/server.js"
    }
 }
