--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ DATABASE_URL = postgres://postgres:root@localhost:5432/atendimentos
 TYPEORM_ENTITIES = "src/entity/**/*.ts"
 TYPEORM_ENTITIES_DIR = "src/entity"
 
-TYPEORM_SYNCHRONIZE = false
+TYPEORM_SYNCHRONIZE = true
 TYPEORM_LOGGING = false
 
 TYPEORM_MIGRATIONS =  "src/database/migration/**/*.ts"
