--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
    "devDependencies": {
       "@types/cors": "^2.8.6",
       "@types/express": "^4.17.7",
+      "@types/hapi__joi": "^17.1.4",
       "@types/jsonwebtoken": "^8.5.0",
       "@types/node": "^8.0.29",
       "ts-node-dev": "^1.0.0-pre.51",
