--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
       "@types/express": "^4.17.7",
       "@types/hapi__joi": "^17.1.4",
       "@types/jsonwebtoken": "^8.5.0",
+      "@types/module-alias": "^2.0.0",
       "@types/node": "^8.0.29",
+      "@typescript-eslint/eslint-plugin": "^4.1.0",
+      "@typescript-eslint/parser": "^4.1.0",
+      "eslint": "^7.8.1",
+      "prettier": "^2.1.1",
       "ts-node-dev": "^1.0.0-pre.51",
       "typescript": "^3.9.7"
    },
@@ -18,6 +23,7 @@
       "dotenv": "^8.2.0",
       "express": "^4.17.1",
       "jsonwebtoken": "^8.5.1",
+      "module-alias": "^2.2.2",
       "pg": "^7.3.0",
       "reflect-metadata": "^0.1.10",
       "ts-node": "^8.10.2",
@@ -27,6 +33,11 @@
       "build": "tsc",
       "dev": "ts-node-dev  src/server.ts",
       "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
-      "start": "node ./dist/server.js"
+      "start": "build",
+      "start:local": "npm run build && build ",
+      "style:check": "prettier --check src/**/*.ts test/**/*.ts",
+      "style:fix": "prettier --write src/**/*.ts test/**/*.ts",
+      "lint": "eslint ./src ./test --ext .ts",
+      "lint:fix": "eslint ./src ./test --ext .ts --fix"
    }
 }
