--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "typescript": "^3.9.7"
    },
    "dependencies": {
+      "@overnightjs/core": "^1.7.5",
       "celebrate": "^12.1.2",
       "class-validator": "^0.12.2",
       "cors": "^2.8.5",
@@ -31,7 +32,7 @@
    },
    "scripts": {
       "build": "tsc",
-      "dev": "ts-node-dev  src/server.ts",
+      "dev": "ts-node-dev  src/index.ts",
       "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
       "start": "build",
       "start:local": "npm run build && build ",
