--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
    },
    "scripts": {
       "build": "tsc",
-      "dev": "ts-node-dev  src/server.ts",
+      "dev": "ts-node-dev src/index.ts",
       "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
-      "start": "node ./dist/server.js"
+      "start": "node ./dist/index.js"
    }
 }
