--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@types/cors": "^2.8.8",
         "@types/express": "^4.17.11",
         "@types/jsonwebtoken": "^8.5.0",
+        "@types/module-alias": "^2.0.0",
         "@typescript-eslint/eslint-plugin": "^4.14.0",
         "@typescript-eslint/parser": "^4.14.0",
         "eslint": "^7.18.0",
@@ -17,6 +18,7 @@
         "typescript": "^4.1.2"
     },
     "dependencies": {
+        "-": "^0.0.1",
         "@overnightjs/core": "^1.7.5",
         "body-parser": "^1.19.0",
         "celebrate": "^13.0.4",
@@ -24,6 +26,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
+        "module-alias": "^2.2.2",
         "mysql": "^2.18.1",
         "pg": "^8.5.1",
         "reflect-metadata": "^0.1.13",
