--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,14 +41,11 @@
     /* Module Resolution Options */
     // "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
     // "baseUrl": ".",                       /* Base directory to resolve non-absolute module names. */
-     "paths": {    // ajuda a importação para com alias 
-      "@src/*": ["./src/*"],  
-      "@test/*": ["./test/*"]
-    },
-    "rootDirs": [
-      "./src",
-      "./test"
-    ],                       /* List of root folders whose combined content represents the structure of the project at runtime. */
+ //    "paths": {    // ajuda a importação para com alias 
+//      "@src/*": ["./src/*"],  
+ //     "@test/*": ["./test/*"]
+ //   },
+  "rootDirs": [ "./src"],                      /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
     // "types": [],                           /* Type declaration files to be included in compilation. */
     // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
